tests/ui/type/pattern_types/validity.stderr
error[E0080]: constructing invalid value: encountered 0, but expected something greater or equal to 1
  --> $DIR/validity.rs:10:49
   |
LL | const BAD: pattern_type!(u32 is 1..) = unsafe { std::mem::transmute(0) };
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD` failed here

error[E0080]: constructing invalid value: encountered uninitialized memory, but expected an integer
  --> $DIR/validity.rs:14:14
   |
LL |     unsafe { std::mem::transmute(std::mem::MaybeUninit::<u32>::uninit()) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_UNINIT` failed here

error[E0080]: constructing invalid value: encountered a pointer, but expected an integer
  --> $DIR/validity.rs:17:55
   |
LL | const BAD_PTR: pattern_type!(usize is 1..) = unsafe { std::mem::transmute(&42) };
   |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_PTR` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error[E0080]: constructing invalid value: encountered 0, but expected something greater or equal to 1
  --> $DIR/validity.rs:20:67
   |
LL | const BAD_AGGREGATE: (pattern_type!(u32 is 1..), u32) = (unsafe { std::mem::transmute(0) }, 0);
   |                                                                   ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_AGGREGATE` failed here

error[E0080]: constructing invalid value: encountered 0, but expected something greater or equal to 1
  --> $DIR/validity.rs:26:39
   |
LL | const BAD_FOO: Foo = Foo(Bar(unsafe { std::mem::transmute(0) }));
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_FOO` failed here

error[E0080]: constructing invalid value: encountered uninitialized memory, but expected a unicode scalar value
  --> $DIR/validity.rs:30:14
   |
LL |     unsafe { std::mem::transmute(std::mem::MaybeUninit::<u32>::uninit()) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `CHAR_UNINIT` failed here

error[E0080]: constructing invalid value: encountered 97, but expected something in the range 65..=89
  --> $DIR/validity.rs:33:64
   |
LL | const CHAR_OOB_PAT: pattern_type!(char is 'A'..'Z') = unsafe { std::mem::transmute('a') };
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `CHAR_OOB_PAT` failed here

error[E0080]: constructing invalid value: encountered 0xffffffff, but expected a valid unicode scalar value (in `0..=0x10FFFF` but not in `0xD800..=0xDFFF`)
  --> $DIR/validity.rs:36:60
   |
LL | const CHAR_OOB: pattern_type!(char is 'A'..'Z') = unsafe { std::mem::transmute(u32::MAX) };
   |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `CHAR_OOB` failed here

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0080`.
